--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,9 @@ JWT_SECRET=your-super-secret-key-change-this-in-production
 JWT_EXPIRATION_HOURS=24
 
 RABBITMQ_URL="amqp://guest:guest@localhost:5672/"
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+MAIL_HOST=mailhog
+MAIL_PORT=1025
