--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,4 +1,4 @@
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=qwe
@@ -9,4 +9,10 @@ PORT=8080
 JWT_SECRET=your-super-secret-key-change-this-in-production
 JWT_EXPIRATION_HOURS=24
 
-RABBITMQ_URL="amqp://guest:guest@localhost:5672/"
+RABBITMQ_URL="amqp://guest:guest@rabbitmq:5672/"
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+MAIL_HOST=mailhog
+MAIL_PORT=1025
