--- a/backend/.env.development
+++ b/backend/.env.development
@@ -11,8 +11,10 @@ JWT_EXPIRATION_HOURS=24
 
 RABBITMQ_URL="amqp://guest:guest@rabbitmq:5672/"
 
-REDIS_HOST=redis
-REDIS_PORT=6379
+# Redis Configuration
+REDIS_ADDR="redis:6379"
+REDIS_PASSWORD=""
+REDIS_DB=0
 
 MAIL_HOST=mailhog
 MAIL_PORT=1025
